--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --watch"
+    "build": "tsc --watch",
+    "prepare": "husky install"
   },
   "author": "Jeff",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "eslint": "^8.46.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
+    "husky": "^8.0.3",
     "typescript": "^5.1.6"
   },
   "dependencies": {
